[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "verifier"
crate-type = ["rlib"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
merlin = { version = "3", default-features = false }
blake2 = { version = "0.10", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive"] }
bulletproofs = { version = "4", default-features = false }
curve25519-dalek-ng = { version = "4", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }

[features]
std = []
