[package]
name = "proofhub-verifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "proofhub_verifier"
crate-type = ["rlib"]

[dependencies]
blake2 = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive"] }
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-44"] }
winter-verifier = { version = "0.13", default-features = false }
winterfell = { version = "0.13", optional = true }
rand_core = { version = "0.6", optional = true }

[dev-dependencies]
hex = "0.4"
fips204 = { version = "0.4", features = ["ml-dsa-44"] }
rand_core = { version = "0.6", features = ["getrandom"] }
winterfell = { version = "0.13" }

[features]
std = []
prover = ["winterfell", "rand_core"]
