[package]
name = "pallet-proofhub-proofs"
version = "1.0.0"
edition = "2026"
description = "ProofHub proofs pallet (Phase 9): on-chain STARK-membership + ML-DSA-44 verification for the quantum-resistant private lane (deposit_v2 / withdraw_v2 / purchase_rwa_v2 / purchase_access_v2); legacy v1 calls disabled at runtime."
license = "Unlicense"
publish = false

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
blake3 = { version = "1", default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"blake3/std",
]
runtime-benchmarks = []
try-runtime = []
