[package]
name = "pallet-rwa-registry"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Unlicense"
publish = false
description = "RWA Registry pallet: stores real-world asset metadata and lock state."

[lints]
workspace = true

[dependencies]
codec        = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info   = { workspace = true, default-features = false, features = ["derive"] }
log          = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system  = { workspace = true, default-features = false }
sp-runtime   = { workspace = true, default-features = false }
sp-std       = { workspace = true, default-features = false }
serde         = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
sp-io   = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
