[package]
name = "scanproof-pallet-proofs"
version = "1.0.0"
edition = "2021"
description = "ScanProof proofs pallet (Phase 10): on-chain Pedersen-commitment + GK17 one-of-many verification for the homomorphic private lane (deposit_coin / purchase_coin / withdraw_coin / purchase_access_coin)."
license = "Unlicense"
publish = false

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = []
try-runtime = []
